[tool.poetry]
name = "mcd-order-bot"
version = "0.1.0"
description = ""
authors = ["Simon Liang <simon@x-tech.io>"]

[[tool.poetry.source]]
name = 'private'
url = 'https://pypi.rasa.com/simple'

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["transformers"], version = "^2.2.2"}
transformers = {version = "2.11.0", extras = ["tf-cpu", "torch"]}
rasa_chinese = "^2.2.0"
playwright = "1.8.0a1"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
wechatpy = "^1.8.14"
shortuuid = "^1.0.1"
opencv-python = "^4.5.1"
rasa-x = "^0.38.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
